# shelldeck

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.agents/: README.md  ai.md  cross-platform.md  github.md  i18n.md  icons.md  overflow.md  patches.md  roles.md  session-state.md  spacing.md  testing.md  theming.md  ui-components.md
.agents/skills/release/: SKILL.md
.agents/skills/release/agents/: openai.yaml
.agents/skills/sync-patches/: SKILL.md
.agents/skills/sync-patches/agents/: openai.yaml
.claude/commands/: release.md  sync-patches.md
.cursor/rules/: cross-platform.mdc  i18n.mdc  icons.mdc  overflow.mdc  patches.mdc  session-state.mdc  testing.mdc  theming.mdc  ui-components.mdc  vendor-policy.mdc
.cursor/skills/write-sdtest/: SKILL.md
.github/workflows/: ci.yml  deploy-worker.yml  release.yml
cloudflare/update-worker/: package-lock.json  package.json  wrangler.toml
cloudflare/update-worker/src/: index.ts
crates/shelldeck/: Cargo.toml  build.rs
crates/shelldeck-core/: Cargo.toml
crates/shelldeck-core/examples/: bext_cloud_probe.rs  cloud_sync_probe.rs  support_probe.rs
crates/shelldeck-core/locales/: en.toml  fr.toml
crates/shelldeck-core/src/: ai.rs  error.rs  git.rs  lib.rs  util.rs
crates/shelldeck-core/src/config/: activity.rs  app_config.rs  autostart.rs  bext_cloud.rs  bext_instance.rs  cloud_account.rs  cloud_sync.rs  deep_link.rs  issues.rs  jean_fleet.rs  jeanclaude.rs  keychain.rs  manage_sites.rs  manage_support.rs  mod.rs  single_instance.rs  ssh_config.rs  store.rs  themes.rs  watcher.rs  workspace_state.rs
crates/shelldeck-core/src/models/: connection.rs  discovery.rs  execution.rs  managed_site.rs  mod.rs  port_forward.rs  script.rs  script_runner.rs  server_sync.rs  templates.rs
crates/shelldeck-ssh/: Cargo.toml
crates/shelldeck-ssh/src/: client.rs  error.rs  handler.rs  known_hosts.rs  lib.rs  pool.rs  session.rs  tunnel.rs
crates/shelldeck-terminal/: Cargo.toml
crates/shelldeck-terminal/benches/: terminal.rs
crates/shelldeck-terminal/src/: colors.rs  error.rs  grid.rs  lib.rs  parser.rs  pty.rs  session.rs  url.rs
crates/shelldeck-ui/: Cargo.toml
crates/shelldeck-ui/src/: ai_action_dialog.rs  ai_assistant.rs  ai_companion.rs  ai_dock.rs  ai_workflow.rs  bext_cloud_view.rs  brand.rs  command_palette.rs  command_palette_window.rs  connection_combobox.rs  connection_form.rs  dashboard.rs  editor_buffer.rs  fleet_view.rs  glyph_cache.rs  i18n.rs  icons.rs  issue_attachments.rs  jean_view.rs  lib.rs  login_form.rs  onboarding_view.rs  port_forward_form.rs  port_forward_view.rs  recent_view.rs  scale.rs  script_editor.rs  script_form.rs  server_sync_view.rs  settings.rs  sidebar.rs  sites_view.rs  status_bar.rs  support_view.rs  template_browser.rs  terminal_view.rs  theme.rs  toast.rs  variable_prompt.rs  workspace.rs
crates/shelldeck-ui/src/file_editor/: buffer.rs  file_browser.rs  highlighter.rs  input.rs  mod.rs  view.rs
crates/shelldeck-ui/src/file_editor/queries/: bash.scm  css.scm  html.scm  javascript.scm  json.scm  python.scm  rust.scm  toml.scm  yaml.scm
crates/shelldeck-ui/src/syntax/: bash.rs  highlight.rs  javascript.rs  mod.rs  php.rs  python.rs  sql.rs
crates/shelldeck-ui/src/workspace/: discovery.rs  forwards.rs  mod.rs  scripts.rs  server_sync.rs  ssh.rs
crates/shelldeck-update/: Cargo.toml
crates/shelldeck-update/src/: installer.rs  lib.rs  platform.rs
crates/shelldeck/assets/icons/lucide/: README.md
crates/shelldeck/assets/images/brand/: index.html  manifest.json
crates/shelldeck/src/: actions.rs  main.rs
crates/shelldeck/src/tray/: mod.rs
docs/: code-quality-audit-2026-07-10.md  release-signing.md
docs/design/: monolith-animations.html  onboarding-brand-visuals.html  request-image-attachments.md
docs/roadmap/: ai-companion-phase4-analysis.md  ai-companion.md  ai-dock-companion.md  companion.md
docs/testing/: INFRA_BLOCKED.md  USE_CASES.md  tests-core.md  tests-ssh.md  tests-terminal.md  tests-ui-and-app.md
packaging/linux/: build-appimage.sh  shelldeck.desktop
packaging/macos/: build-dmg.sh
packaging/windows/: build-nsis.sh  shelldeck.nsi
patches/adabraka-gpui/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  PATCHES.md  README.md  build.rs
patches/adabraka-gpui/examples/: daemon_app.rs  data_table.rs  gradient.rs  image_gallery.rs  opacity.rs  painting.rs  perf_bench.rs  platform_features.rs  set_menus.rs  shadow.rs  text.rs  text_layout.rs  text_wrapper.rs  tray_test.rs  window_shadow.rs
patches/adabraka-gpui/examples/image/: image.rs
patches/adabraka-gpui/resources/windows/: gpui.manifest.xml
patches/adabraka-gpui/src/: app.rs  arena.rs  bounds_tree.rs  color.rs  element.rs  executor.rs  geometry.rs  gpui.rs  input.rs  inspector.rs  interactive.rs  key_dispatch.rs  keymap.rs  platform.rs  scene.rs  style.rs  styled.rs  svg_renderer.rs  tab_stop.rs  taffy.rs  text_system.rs  util.rs  window.rs
patches/adabraka-gpui/src/app/: async_context.rs  entity_map.rs  test_context.rs
patches/adabraka-gpui/src/elements/: animation.rs  div.rs  img.rs  list.rs  mod.rs  svg.rs  text.rs  toast.rs  uniform_list.rs
patches/adabraka-gpui/src/platform/: app_menu.rs  keystroke.rs  (+5 more)
patches/adabraka-ui/: .cargo_vcs_info.json  .claude-tasks.md  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  PATCHES.md  README.md  ROADMAP.md
patches/adabraka-ui/docs/: index.html
patches/adabraka-ui/examples/: card_styled_demo.rs  components_showcase.rs  drag_drop_styled_demo.rs  gpui_extensions_showcase.rs  html_demo.rs  markdown_demo.rs  polish_v2_demo.rs  popover_menu_styled_demo.rs  resizable_styled_demo.rs  tabs_styled_demo.rs
patches/adabraka-ui/src/: gpui_ext.rs  prelude.rs  styled_ext.rs
patches/diffs/: zed-xim-SDPATCH-001.patch  zed-xim.md
patches/zed-xim/: .cargo_vcs_info.json  Cargo.toml  PATCHES.md
patches/zed-xim/src/: client.rs
scripts/: apply-crate-patches.sh  build-release.sh  export-monolith-brand.py  package-release.sh  release.sh  sign-update-manifest.sh  verify-update-signing-key.sh
(+158 files in other folders)
