[package]
name = "shelldeck-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
notify = { workspace = true }
keyring = { workspace = true }
ssh2-config = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
