[package]
name = "shelldeck-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shelldeck-core = { path = "../shelldeck-core" }
russh = { workspace = true }
russh-keys = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
