[package]
name = "shelldeck-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shelldeck-core = { path = "../shelldeck-core" }
portable-pty = { workspace = true }
vte = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
regex = "1"
