[package]
name = "shelldeck-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shelldeck-core = { path = "../shelldeck-core" }
shelldeck-ssh = { path = "../shelldeck-ssh" }
shelldeck-terminal = { path = "../shelldeck-terminal" }
shelldeck-update = { path = "../shelldeck-update" }
gpui = { workspace = true }
adabraka-ui = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
once_cell = { workspace = true }
open = "5"
ropey = "1"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
