[package]
name = "shelldeck-update"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
