[package]
name = "shelldeck"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shelldeck"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
shelldeck-core = { path = "../shelldeck-core" }
shelldeck-ssh = { path = "../shelldeck-ssh" }
shelldeck-terminal = { path = "../shelldeck-terminal" }
shelldeck-ui = { path = "../shelldeck-ui" }
gpui = { workspace = true }
adabraka-ui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
